fix spacing for wide screens

--- a/css/main.css
+++ b/css/main.css
@@ -185,9 +185,11 @@ body {
 }
 
 @media only screen and (min-width: 1100px) {
-  .heading {
+  .content {
     padding-left: 200px;
+    padding-right: 200px;
   }
+
 }
 
 @media only screen and (max-width: 467px) {
